--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Instagram Archive Viewer</h1>
+    <h1>Instagram Saved Viewer</h1>
     <div id="gallery" class="gallery"></div>
   </div>
   <script src="script.js"></script>
